<?xml version="1.0" encoding="UTF-8"?>

<project xmlns="http://maven.apache.org/POM/4.0.0" xmlns:xsi="http://www.w3.org/2001/XMLSchema-instance"
         xsi:schemaLocation="http://maven.apache.org/POM/4.0.0 http://maven.apache.org/xsd/maven-4.0.0.xsd">
    <modelVersion>4.0.0</modelVersion>
    <groupId>com.mark</groupId>
    <artifactId>actorpro_2.10</artifactId>
    <version>1.5.0-SNAPSHOT</version>
    <packaging>jar</packaging>


    <properties>
        <PermGen>64m</PermGen>
        <MaxPermGen>512m</MaxPermGen>
        <CodeCacheSize>512m</CodeCacheSize>
        <scala.version>2.11.6</scala.version>
    </properties>


   <repositories>
        <!--<repository>-->
            <!--<id>dc_public</id>-->
            <!--<name>Dukascopy public repository</name>-->
            <!--<url>http://www.dukascopy.com/client/jforexlib/publicrepo/</url>-->
        <!--</repository>-->
    </repositories>

    <dependencies>
        <dependency>
            <groupId>com.typesafe.akka</groupId>
            <artifactId>akka-actor_2.11</artifactId>
            <version>2.3.10</version>
            <exclusions>
                <!--<exclusion>-->
                        <!--<groupId>org.scala-lang</groupId>-->
                        <!--<artifactId>scala-reflect</artifactId>-->
                <!--</exclusion>-->
                <exclusion>
                        <groupId>org.scala-lang</groupId>
                        <artifactId>scala-library</artifactId>
                </exclusion>
            </exclusions>
        </dependency>
        <dependency>
            <groupId>org.scala-lang</groupId>
            <artifactId>scala-library</artifactId>
            <version>2.11.6</version>
        </dependency>
        <dependency>
            <groupId>io.spray</groupId>
            <artifactId>spray-can</artifactId>
            <version>1.2.3</version>
        </dependency>
        <dependency>
            <groupId>com.google.guava</groupId>
            <artifactId>guava</artifactId>
            <version>18.0</version>
        </dependency>
        <dependency>
            <groupId>com.alibaba</groupId>
            <artifactId>fastjson</artifactId>
            <version>1.2.7</version>
        </dependency>
        <dependency>
            <groupId>org.apache.httpcomponents</groupId>
            <artifactId>httpclient</artifactId>
            <version>4.2.2</version>
        </dependency>
        <dependency>
            <groupId>commons-lang</groupId>
            <artifactId>commons-lang</artifactId>
            <version>2.4</version>
        </dependency>

        <dependency>
            <groupId>org.apache.cxf</groupId>
            <artifactId>cxf-rt-core</artifactId>
            <version>2.7.3</version>
        </dependency>


        <!-- dukascopy  api -->
        <!--<dependency>-->
            <!--<groupId>com.dukascopy.dds2</groupId>-->
            <!--<artifactId>DDS2-jClient-JForex</artifactId>-->
            <!--&lt;!&ndash; find the latest available version here:-->
                <!--http://www.dukascopy.com/client/jforexlib/publicrepo/com/dukascopy/dds2/DDS2-jClient-JForex/-->
            <!--&ndash;&gt;-->
            <!--<version>2.45.2</version>-->
            <!--<exclusions>-->
                <!--<exclusion>-->
                    <!--<groupId>org.slf4j</groupId>-->
                    <!--<artifactId>slf4j-jdk14</artifactId>-->
                <!--</exclusion>-->
            <!--</exclusions>-->
        <!--</dependency>-->
        <!--&lt;!&ndash; find the latest available version here:-->
            <!--http://www.dukascopy.com/client/jforexlib/publicrepo/com/dukascopy/api/JForex-API/-->
        <!--&ndash;&gt;-->
        <!--<dependency>-->
            <!--<groupId>com.dukascopy.api</groupId>-->
            <!--<artifactId>JForex-API</artifactId>-->
            <!--<version>2.12.15</version>-->
            <!--<classifier>sources</classifier>-->
        <!--</dependency>-->



        <!--<dependency>-->
            <!--<groupId>org.scala-lang</groupId>-->
            <!--<artifactId>scalap</artifactId>-->
            <!--<version>${scala.version}</version>-->
        <!--</dependency>-->
        <!--<dependency>-->
            <!--<groupId>org.scala-lang</groupId>-->
            <!--<artifactId>scala-reflect</artifactId>-->
            <!--<version>${scala.version}</version>-->
        <!--</dependency>-->
        <!--<dependency>-->
            <!--<groupId>org.scala-lang</groupId>-->
            <!--<artifactId>scala-library</artifactId>-->
            <!--<version>${scala.version}</version>-->
        <!--</dependency>-->

        <dependency>
            <groupId>org.scalatest</groupId>
            <artifactId>scalatest_2.11</artifactId>
            <version>2.2.4</version>
            <exclusions>
                <exclusion>
                    <groupId>org.scala-lang</groupId>
                    <artifactId>scala-reflect</artifactId>
                </exclusion>
            </exclusions>
        </dependency>

        <dependency>
            <groupId>com.typesafe.akka</groupId>
            <artifactId>akka-testkit_2.11</artifactId>
            <version>2.3.10</version>
        </dependency>
    </dependencies>
    <build>
        <plugins>
        <!--<plugin>-->
            <!--<groupId>net.alchim31.maven</groupId>-->
            <!--<artifactId>scala-maven-plugin</artifactId>-->
            <!--<version>3.2.0</version>-->
            <!--<executions>-->
                <!--<execution>-->
                    <!--<id>eclipse-add-source</id>-->
                    <!--<goals>-->
                        <!--<goal>add-source</goal>-->
                    <!--</goals>-->
                <!--</execution>-->
                <!--<execution>-->
                    <!--<id>scala-compile-first</id>-->
                    <!--<phase>process-resources</phase>-->
                    <!--<goals>-->
                        <!--<goal>compile</goal>-->
                    <!--</goals>-->
                <!--</execution>-->
                <!--<execution>-->
                    <!--<id>scala-test-compile-first</id>-->
                    <!--<phase>process-test-resources</phase>-->
                    <!--<goals>-->
                        <!--<goal>testCompile</goal>-->
                    <!--</goals>-->
                <!--</execution>-->
                <!--<execution>-->
                    <!--<id>attach-scaladocs</id>-->
                    <!--<phase>verify</phase>-->
                    <!--<goals>-->
                        <!--<goal>doc-jar</goal>-->
                    <!--</goals>-->
                <!--</execution>-->
            <!--</executions>-->
            <!--<configuration>-->
                <!--<scalaVersion>${scala.version}</scalaVersion>-->
                <!--<recompileMode>incremental</recompileMode>-->
                <!--<useZincServer>true</useZincServer>-->
                <!--<args>-->
                    <!--<arg>-unchecked</arg>-->
                    <!--<arg>-deprecation</arg>-->
                    <!--<arg>-feature</arg>-->
                <!--</args>-->
                <!--<jvmArgs>-->
                    <!--<jvmArg>-Xms1024m</jvmArg>-->
                    <!--<jvmArg>-Xmx1024m</jvmArg>-->
                    <!--<jvmArg>-XX:PermSize=${PermGen}</jvmArg>-->
                    <!--<jvmArg>-XX:MaxPermSize=${MaxPermGen}</jvmArg>-->
                    <!--<jvmArg>-XX:ReservedCodeCacheSize=${CodeCacheSize}</jvmArg>-->
                <!--</jvmArgs>-->
                <!--<javacArgs>-->
                    <!--<javacArg>-source</javacArg>-->
                    <!--<javacArg>${java.version}</javacArg>-->
                    <!--<javacArg>-target</javacArg>-->
                    <!--<javacArg>${java.version}</javacArg>-->
                <!--</javacArgs>-->
            <!--</configuration>-->
        <!--</plugin>-->
        <plugin>
            <groupId>org.scala-tools</groupId>
            <artifactId>maven-scala-plugin</artifactId>
            <version>2.15.2</version>
            <executions>
                <execution>
                    <id>scala-compile-first</id>
                    <phase>process-resources</phase>
                    <goals>
                        <goal>add-source</goal>
                        <goal>compile</goal>
                    </goals>
                </execution>
                <execution>
                    <id>scala-test-compile</id>
                    <phase>process-test-resources</phase>
                    <goals>
                        <goal>testCompile</goal>
                    </goals>
                </execution>
            </executions>
            <configuration>
                <sourceDir>src/main/java</sourceDir>
                <sourceDir>src/main/scala</sourceDir>
                <jvmArgs>
                    <jvmArg>-Xms1024m</jvmArg>
                    <jvmArg>-Xmx1024m</jvmArg>
                    <jvmArg>-XX:ReservedCodeCacheSize=128m</jvmArg>
                </jvmArgs>
                <!--<jvmArgs>-->
                    <!--<jvmArg>-Xms64m</jvmArg>-->
                    <!--<jvmArg>-Xmx1024m</jvmArg>-->
                <!--</jvmArgs>-->
            </configuration>
        </plugin>
        <plugin>
            <groupId>org.apache.maven.plugins</groupId>
            <artifactId>maven-compiler-plugin</artifactId>
            <version>3.3</version>
            <executions>
                <execution>
                    <phase>compile</phase>
                    <goals>
                        <goal>compile</goal>
                    </goals>
                </execution>
            </executions>
            <configuration>
                <!--<source>${java.version}</source>-->
                <!--<target>${java.version}</target>-->
                <source>1.6</source>
                <target>1.6</target>
                <encoding>UTF-8</encoding>
                <maxmem>1024m</maxmem>
                <fork>true</fork>
            </configuration>
        </plugin>


        <plugin>
            <groupId>org.apache.maven.plugins</groupId>
            <artifactId>maven-assembly-plugin</artifactId>
            <version>2.3</version>
            <executions>  <!--执行器 mvn assembly:assembly-->
                <execution>
                    <id>make-zip</id><!--名字任意 -->
                    <phase>package</phase><!-- 绑定到package生命周期阶段上 -->
                    <goals>
                        <goal>single</goal><!-- 只运行一次 -->
                    </goals>
                    <configuration>
                        <descriptors>
                            <descriptor>src/main/assembly/assembly.xml</descriptor>
                        </descriptors>
                        <archive>
                            <manifest>
                                <mainClass>actor.OkCoinSystem</mainClass>
                                <classpathPrefix>/</classpathPrefix>
                            </manifest>
                        </archive>
                    </configuration>
                </execution>
            </executions>
        </plugin>
        </plugins>
    </build>

</project>
